img/HW_1.5/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: depl-back
spec:
  selector:
    matchLabels:
      app: depl-back
  template:
    metadata:
      labels:
        app: depl-back
    spec:
      containers:
      - name: multitool-curl
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
