img/HW_1.5/svc_back-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-service
spec:
  selector:
    app: depl-front
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: back-service
spec:
  selector:
    app: depl-back
  ports:
    - port: 80
      targetPort: 8080
