img/HW_1.5/bf_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bf-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: hw15.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: back-service
                port:
                  number: 80
